<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- GENERAL -->
    <string name="app_name">Wombat (Timer)</string>
    <string name="min_sec_devider">:</string>
    <string name="minut">minut</string>
    <string name="minutes">minutter</string>
    <string name="second">sekund</string>
    <string name="seconds">sekunder</string>
    <string name="and_devider">og</string>
    
    <!-- PROFILE LIST -->
    <string name="profile_list_header">Profiler</string>
    <string name="predefined">Predefineret</string>
    <string name="last_used">Sidst Brugt</string>
    <string name="profile_pic_description">Profil Billede</string>
    <string name="profile_list_time">Tid</string>
    
    <!-- TEMPLATE LIST -->
    <string name="template_list_header">Gemte Tilpasninger</string>
    <string name="delete_subprofile_message">Vil du slette?</string>
    <string name="delete_yes">Ja</string>
    <string name="delete_no">Nej</string>
    
    <!-- CUSTOMIZE -->
    <string name="start_activity_default">Tilpas</string>
    <string name="customize_header">Tilpas</string>
    <string name="customize_style_description">Stil</string>
    <string name="customize_hourglass_description">Timeglas</string>
    <string name="customize_timetimer_description">Ur</string>
    <string name="customize_progressbar_description">Bar</string>
    <string name="customize_digital_description">Digital Ur</string>
    <string name="colors">Farver</string>
    <string name="color_time_left">Tid Tilbage</string>
    <string name="color_picker_button">Vælg Farve</string>
    <string name="attachment_button_description">Vedhæft</string>
    
    <string name="select_attachment_dialog">Vælg Vedhæft</string>
    <string name="attached">Vedhæftet</string>
    <string name="choose_profile">Vælg en Profil</string>
    <string name="start_button">Start</string>
    <string name="save_button">Gem</string>
    <string name="save_as_button">Gem Som &#8230;</string>
    <string name="gradient">Overgang</string>
    <string name="frame">Ramme</string>
    <string name="background">Baggrund</string>
    
    <string name="toast_text">blev gemt på</string>

</resources>