<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/houglassButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:drawableTop="@drawable/thumbnail_hourglass"
            android:paddingTop="20dp"
            android:text="@string/customize_hourglass_description"
            android:textSize="14dp" />

        <Button
            android:id="@+id/timetimerButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:drawableTop="@drawable/thumbnail_timetimer"
            android:paddingTop="20dp"
            android:text="@string/customize_timetimer_description"
            android:textSize="14dp" />

        <Button
            android:id="@+id/progressbarButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:drawableTop="@drawable/thumbnail_progressbar"
            android:paddingTop="20dp"
            android:text="@string/customize_progressbar_description"
            android:textSize="14dp" />

        <Button
            android:id="@+id/digitalButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:drawableTop="@drawable/thumbnail_digital"
            android:paddingTop="20dp"
            android:text="@string/customize_digital_description"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <kankan.wheel.widget.WheelView
                android:id="@+id/minPicker"
                android:layout_width="60dp"
                android:layout_height="120dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/min_sec_devider"
                android:textSize="30dp" />

            <kankan.wheel.widget.WheelView
                android:id="@+id/secPicker"
                android:layout_width="60dp"
                android:layout_height="120dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/showTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingRight="20dp" />
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <!-- COLOR PICKER -->

        <Button
            android:id="@+id/blueButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/redButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/yellowButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <Button
            android:id="@+id/colorPickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/color_picker_button"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <Button
                android:id="@+id/customize_attachment"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/thumbnail_attachment"
                android:paddingTop="20dp"
                android:text="@string/attachment_button_description"
                android:textSize="14dp" />

            <Button
                android:id="@+id/customize_save"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/thumbnail_save"
                android:paddingTop="20dp"
                android:text="@string/save_button"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <TextView
                android:id="@+id/customize_attachment_text"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:gravity="center"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/customize_start_button"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/thumbnail_start"
                android:paddingTop="20dp"
                android:text="@string/start_button"
                android:textSize="14dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>